--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class=" col-lg-6 col-md-12 col-sm-12 card1 " >
 
-        <div class="mt-5 mx-auto mt-5 text-center card11">
+        <div class=" mx-auto text-center card11">
   
           <div id="result">
   
